gccida/c2/init_save_areas
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_save_areas/src/caller-save.c:720:19: error: use of undeclared identifier 'stack_arg_under_construction'
memset( ( char *)&stack_arg_under_construction + i, 0, v0); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_save_areas/src/caller-save.c:721:13: error: use of undeclared identifier 'libiberty_nptr'
memset( &( &libiberty_nptr)[i / 8], 0, v0); 
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_save_areas/src/obj/caller-save.o] Error 1
